# rust_allocine_scraper

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  notes_docker.md  startapp.sh  webdriver.sh
back/: Cargo.toml  Dockerfile  Rocket.toml
back/src/: errors.rs  interact.rs  main.rs  tests.rs
back/src/movie/: mod.rs  screening.rs
gecko/: Dockerfile  startapp.sh
rust/: Cargo.toml  Dockerfile
rust/src/: interact.rs  main.rs  tests.rs
rust/src/movie/: mod.rs  screening.rs
src/: errors.rs  interact.rs  main.rs  tests.rs
src/movie/: mod.rs  screening.rs
