[package]
name = "rust-allocine-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
unidecode = "0.3.0"
fantoccini = "0.19.3" 
tokio = {version = "1.36.0",features = ["full"] }