[package]
name = "rust-allocine-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
reqwest = {version = "0.11", features = ["blocking"]}
unidecode = "0.3.0"
fantoccini = {version = "0.19.3", default-features = false, features = ["rustls-tls"] } 
tokio = {version = "1.36.0",features = ["full"] }
rocket = "0.5.0"
serde_json = "1.0.114"
serde = "1.0.197"
